@@ -1,3 +1,14 @@
+2003-10-28  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/count_array.cpp:
+	* libpp/count_array.h:
+	* libpp/locate_images.h:
+	* libpp/parse_filename.cpp:
+	* libpp/profile.cpp:
+	* libpp/profile.h:
+	* libpp/profile_spec.cpp:
+	* libpp/symbol_sort.cpp: minor tidy
+
 2003-10-28  Jason Lunz  <lunz@falooley.org>
 
 	* doc/opcontrol.1.in: better wording for --separate=
